NFA Construction done for simple operations (. | * + ?)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ repositories {
     mavenCentral()
 }
 
+run {
+    standardInput = System.in
+}
+
 dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
@@ -25,9 +29,13 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
+
+    // https://mvnrepository.com/artifact/org.freemarker/freemarker
+    implementation 'org.freemarker:freemarker:2.3.32'
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'regexjava.App'
 }
+
