--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'antlr'
 }
 
 repositories {
@@ -18,7 +19,7 @@ repositories {
 
 run {
     standardInput = System.in
-    classpath += files('./src/freeMarkerTemplates')
+    classpath += files('./src/main/freeMarkerTemplates')
 }
 
 dependencies {
@@ -33,6 +34,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.freemarker/freemarker
     implementation 'org.freemarker:freemarker:2.3.32'
+
+    // https://mvnrepository.com/artifact/org.antlr/antlr4
+    antlr 'org.antlr:antlr4:4.12.0'    
 }
 
 application {
