💎 feature: 'positive' character classes almost fully implemented (no negations + some missing shared_atoms + classes that start with ]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 }
 
 generateGrammarSource {
-    arguments += ['-package', 'PCREgrammar']
+    arguments += ["-visitor", '-package', 'PCREgrammar']
     outputDirectory = new File(buildDir.toString() + "/generated-src/antlr/main/PCREgrammar/")
 }
 
