💎 feature: regular expressions can now be read from std.in strings (was already supported), files (-f flag) and entire directories (-d flag) closes #3. Added multiple pcre files to resources/rules

--- a/pcre-to-hls/build.gradle
+++ b/pcre-to-hls/build.gradle
@@ -20,6 +20,7 @@ repositories {
 run {
     standardInput = System.in
     classpath += files('./src/main/freeMarkerTemplates')
+    classpath += files('./src/main/resources')
 }
 
 dependencies {
