--- a/pcre-to-hls/build.gradle
+++ b/pcre-to-hls/build.gradle
@@ -24,6 +24,9 @@ run {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+    implementation 'commons-cli:commons-cli:1.5.0'
+
     // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
 
