💎 feature: added a way to graphically display the automata

--- a/pcre-to-hls/build.gradle
+++ b/pcre-to-hls/build.gradle
@@ -27,6 +27,12 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
     implementation 'commons-cli:commons-cli:1.5.0'
 
+    // https://mvnrepository.com/artifact/org.graphstream/gs-core
+    implementation 'org.graphstream:gs-core:2.0'
+
+    // https://mvnrepository.com/artifact/org.graphstream/gs-ui-swing
+    implementation 'org.graphstream:gs-ui-swing:2.0'
+
     // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
 
