--- a/pcre-to-hls/build.gradle
+++ b/pcre-to-hls/build.gradle
@@ -24,8 +24,8 @@ run {
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/commons-cli/commons-cli
-    implementation 'commons-cli:commons-cli:1.5.0'
+    // https://mvnrepository.com/artifact/com.gitlab.klamonte/jexer
+    implementation 'com.gitlab.klamonte:jexer:1.6.0'
 
     // https://mvnrepository.com/artifact/org.graphstream/gs-core
     implementation 'org.graphstream:gs-core:2.0'
