--- a/pcre-to-hls/build.gradle
+++ b/pcre-to-hls/build.gradle
@@ -9,7 +9,6 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'antlr'
 }
 
 repositories {
@@ -24,6 +23,8 @@ run {
 }
 
 dependencies {
+    implementation project(':antlr-grammar')
+
     // https://mvnrepository.com/artifact/com.gitlab.klamonte/jexer
     implementation 'com.gitlab.klamonte:jexer:1.6.0'
 
@@ -37,15 +38,7 @@ dependencies {
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
 
     // https://mvnrepository.com/artifact/org.freemarker/freemarker
-    implementation 'org.freemarker:freemarker:2.3.32'
-
-    // https://mvnrepository.com/artifact/org.antlr/antlr4
-    antlr 'org.antlr:antlr4:4.12.0'    
-}
-
-generateGrammarSource {
-    arguments += ["-visitor", '-package', 'PCREgrammar']
-    outputDirectory = new File(buildDir.toString() + "/generated-src/antlr/main/PCREgrammar/")
+    implementation 'org.freemarker:freemarker:2.3.32'  
 }
 
 application {
