--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,4 @@
  */
 
 rootProject.name = 'RegexJava'
-include('pcre-to-hls', 'pcre-extractor')
+include('pcre-to-hls', 'pcre-extractor', 'antlr-grammar')
